syntax = "proto3";

message Jwk {
  string kty = 1;
  string use = 2;
  repeated string key_ops = 3;
  string alg = 4;
  string kid = 5;
  bytes payload = 6;
}

enum JwkUsage {
  JWK_USAGE_UNSPECIFIED = 0;
  JWK_USAGE_AUTH = 1;
  JWK_USAGE_AUTH_REFRESH = 2;
}
